<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/movieDetailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="180dp"
            android:layout_height="280dp"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/releaseDateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="@string/movie_release"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/moviePoster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/releaseDateHeader"
            app:layout_constraintTop_toTopOf="@id/releaseDateHeader"
            tools:text="release" />

        <TextView
            android:id="@+id/popularityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="@string/movie_popularity"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/moviePoster"
            app:layout_constraintTop_toBottomOf="@id/releaseDate" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/popularityHeader"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"
            tools:text="@string/movie_popularity" />

        <TextView
            android:id="@+id/ratingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="@string/movie_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/moviePoster"
            app:layout_constraintTop_toBottomOf="@id/popularityHeader" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ratingHeader"
            app:layout_constraintTop_toBottomOf="@id/popularityHeader"
            tools:text="@string/movie_popularity" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moviePoster"
            tools:text="title" />

        <TextView
            android:id="@+id/overviewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_16dp"
            android:text="@string/movie_overview"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginLeft="@dimen/space_8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overviewHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
